@@ -242,8 +242,7 @@ enum
   NO_SYNC_OPTION = CHAR_MAX + 1,
   SYNC_OPTION,
   TOTAL_OPTION,
-  OUTPUT_OPTION,
-  MEGABYTES_OPTION  /* FIXME: remove long opt in Aug 2013 */
+  OUTPUT_OPTION
 };
 
 static struct option const long_options[] =
@@ -254,7 +253,6 @@ static struct option const long_options[] =
   {"human-readable", no_argument, NULL, 'h'},
   {"si", no_argument, NULL, 'H'},
   {"local", no_argument, NULL, 'l'},
-  {"megabytes", no_argument, NULL, MEGABYTES_OPTION}, /* obsolescent,  */
   {"output", optional_argument, NULL, OUTPUT_OPTION},
   {"portability", no_argument, NULL, 'P'},
   {"print-type", no_argument, NULL, 'T'},
@@ -1358,13 +1356,6 @@ main (int argc, char **argv)
         case 'l':
           show_local_fs = true;
           break;
-        case MEGABYTES_OPTION:
-          /* Distinguish between the long and the short option.
-             As we want to remove the long option soon,
-             give a warning when the long form is used.  */
-          error (0, 0, "%s%s", _("warning: "),
-            _("long option '--megabytes' is deprecated"
-              " and will soon be removed"));
         case 'm': /* obsolescent, exists for BSD compatibility */
           human_output_opts = 0;
           output_block_size = 1024 * 1024;
